[package]
name = "agentview"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A session viewer for AI coding-agent transcripts, built with fenestra"
repository = "https://github.com/richer-richard/agentview"

[dependencies]
fenestra = "0.4"
serde_json = "1.0.150"

[lints.rust]
unsafe_code = "forbid"
